--- a/_posts/0000-01-02-parag84.md
+++ b/_posts/0000-01-02-parag84.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-This is parag84's file
+This is parag84's slide
 Use the left arrow to go back!!
