--- a/_posts/0000-01-02-parag84.md
+++ b/_posts/0000-01-02-parag84.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our github teacher slide!"
 ---
 This is parag84's slide
 Use the left arrow to go back!!
